--- a/languages/hi-in.lang
+++ b/languages/hi-in.lang
@@ -1,8 +1,18 @@
 LanguageName = Hindi
 TextboxPlaceholderLabel = Enter your text here...
 SettingsMenuTitle = वाक्य
+ChooseAPILabel = API to be used for Text to Speech
 GeneralTabName = सामान्य
 GTTSTabName = GTTS
 Pyttsx3TabName = Pyttsx3
 Pyttsx3SpeedLabel = Speech Rate (Words per minute)
 Pyttsx3VolumeLabel = Speech Volume (Percentage)
+Pyttsx3VoiceLabel = Voice to be used
+Pyttsx3NoVoiceError = No voice packs installed
+Pyttsx3VoiceinfoLabel = Gender supported by selected voice
+Pyttsx3VoiceGenderMale = Male
+Pyttsx3VoiceGenderFemale = Female
+Pyttsx3VoiceGenderUnknown = Unknown
+ButtonApply = Apply
+ButtonCancel = Cancel
+ButtonOK = OK
