Updated language packs

--- a/languages/en-us.lang
+++ b/languages/en-us.lang
@@ -6,7 +6,11 @@ WaveformLabelPlaying = Playing Now
 WaveformLabelPaused = Speech Paused
 WaveformLabelStopped = Speech Stopped
 WaveformLabelNoTextAlert = Type some text to get audio feedback
+WaveformLabelTTSNotGeneratedAlert = Nothing to Save<BREAK>No speech has been generated yet
+WaveformLabelNoConnectionAlert = You are offline<BREAK>To use GTTS, you must be online
+WaveformLabelUnknownErrorAlert = Oops! Something bad happened :(
 SettingsMenuTitle = Preferences
+SaveDialogTitle = Save Speech Audio
 ChooseAPILabel = API to be used for Text to Speech
 GeneralTabName = General
 GTTSTabName = GTTS
