--- a/languages/hi-in.lang
+++ b/languages/hi-in.lang
@@ -1,28 +1,29 @@
 LanguageName = Hindi
-TextboxPlaceholderLabel = Enter your text here...
-WaveformLabelNormal = Click the Play button to generate Text to Speech
-WaveformLabelGenerating = Generating Text to Speech audio...
-WaveformLabelPlaying = Playing Now
-WaveformLabelPaused = Speech Paused
-WaveformLabelStopped = Speech Stopped
-WaveformLabelNoTextAlert = Type some text to get audio feedback
-WaveformLabelTTSNotGeneratedAlert = Nothing to Save<BREAK>No speech has been generated yet
-WaveformLabelNoConnectionAlert = You are offline<BREAK>To use GTTS, you must be online
-WaveformLabelUnknownErrorAlert = Oops! Something bad happened :(
-SettingsMenuTitle = वाक्य
-SaveDialogTitle = Save Speech Audio
-ChooseAPILabel = API to be used for Text to Speech
+TextboxPlaceholderLabel = अपना टेक्स्ट यहां दर्ज करें...
+WaveformLabelNormal = टेक्स्ट टू स्पीच जेनरेट करने के लिए प्ले बटन पर क्लिक करें
+WaveformLabelGenerating = टेक्स्ट टू स्पीच ऑडियो जेनरेट किया जा रहा है...
+WaveformLabelPlaying = ऑडियो अभी बजाया जा रहा है
+WaveformLabelPaused = ऑडियो रुका हुआ है
+WaveformLabelStopped = ऑडियो बंद कर दिया गया है
+WaveformLabelNoTextAlert = ऑडियो फीडबैक प्राप्त करने के लिए कुछ टेक्स्ट टाइप करें
+WaveformLabelTTSNotGeneratedAlert = सेव करने क लिए कुछ नहीं है<BREAK>कोई स्पीच अभी जेनरेट नहीं किया गया है
+WaveformLabelNoConnectionAlert = आप ऑफलाइन है<BREAK>GTTS का उपयोग करने के लिए, आपको ऑनलाइन होना होगा
+WaveformLabelUnknownErrorAlert = अरे! कुछ बुरा हो गया :(
+SettingsMenuTitle = समायोजन
+SaveDialogTitle = स्पीच ऑडियो सेव करे
+ChooseAPILabel = टेक्स्ट टू स्पीच क लिए कोनसी एपीआई का उपयोग करेंगे
 GeneralTabName = सामान्य
 GTTSTabName = GTTS
 Pyttsx3TabName = Pyttsx3
-Pyttsx3SpeedLabel = Speech Rate (Words per minute)
-Pyttsx3VolumeLabel = Speech Volume (Percentage)
-Pyttsx3VoiceLabel = Voice to be used
-Pyttsx3NoVoiceError = No voice packs installed
-Pyttsx3VoiceinfoLabel = Gender supported by selected voice
-Pyttsx3VoiceGenderMale = Male
-Pyttsx3VoiceGenderFemale = Female
-Pyttsx3VoiceGenderUnknown = Unknown
-ButtonApply = Apply
-ButtonCancel = Cancel
-ButtonOK = OK
+UILanguageLabel = यूआई भाषा
+Pyttsx3SpeedLabel = स्पीच का दर (शब्द प्रति मिनट)
+Pyttsx3VolumeLabel = स्पीच का वॉल्यूम (प्रतिशत)
+Pyttsx3VoiceLabel = कोनसी वॉयस का उपयोग करेंगे
+Pyttsx3NoVoiceError = कोई वॉयस पैक स्थापित नहीं है
+Pyttsx3VoiceinfoLabel = लिंग जो सेलेक्ट किया गया वौइस् सपोर्ट करता है
+Pyttsx3VoiceGenderMale = पुरुष
+Pyttsx3VoiceGenderFemale = महिला
+Pyttsx3VoiceGenderUnknown = अनजान
+ButtonApply = लागू करें
+ButtonCancel = रद्द करें
+ButtonOK = सब ठीक
