Updated language packs

--- a/languages/en-us.lang
+++ b/languages/en-us.lang
@@ -11,6 +11,8 @@ WaveformLabelNoConnectionAlert = You are offline<BREAK>To use GTTS, you must be 
 WaveformLabelUnknownErrorAlert = Oops! Something bad happened :(
 SettingsMenuTitle = Preferences
 SaveDialogTitle = Save Speech Audio
+AboutTitle = About Toice
+UILanguageChangeAlert = You have changed the UI language of Toice. To apply this change, Toice needs to restart.<BREAK><BREAK>Do you want to restart now?
 ChooseAPILabel = API to be used for Text to Speech
 GeneralTabName = General
 GTTSTabName = GTTS
