--- a/languages/hi-in.lang
+++ b/languages/hi-in.lang
@@ -11,6 +11,8 @@ WaveformLabelNoConnectionAlert = आप ऑफलाइन है<BREAK>GTTS क
 WaveformLabelUnknownErrorAlert = अरे! कुछ बुरा हो गया :(
 SettingsMenuTitle = समायोजन
 SaveDialogTitle = स्पीच ऑडियो सेव करे
+AboutTitle = Toice के बारे में जानिए
+UILanguageChangeAlert = आपने Toice की यूआई भाषा परिवर्तन किया है। इस परिवर्तन को लागू करने के लिए Toice को पुनः आरंभ करना होगा।<BREAK><BREAK>क्या आप अभी पुनः आरंभ करना चाहते हैं?
 ChooseAPILabel = टेक्स्ट टू स्पीच क लिए कोनसी एपीआई का उपयोग करेंगे
 GeneralTabName = सामान्य
 GTTSTabName = GTTS
